infrastructure/ingress-controller/manifests/svc-ingress-metrics-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-metrics-svc
  namespace: ingress-nginx-internal
  labels:
    app: nginx-metrics-svc
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx-internal
    app.kubernetes.io/part-of: ingress-nginx-internal
  ports:
  - protocol: TCP
    name: prometheus
    port: 10254
    targetPort: 10254
