infrastructure/ingress-controller/manifests/svc-ingress-nginx-external.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-controller
    app.kubernetes.io/part-of: ingress-controller
  annotations:
    metallb.universe.tf/address-pool: public
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  - name: https-alt
    port: 4443
    targetPort: https
