infrastructure/ingress-controller/manifests/svc-ingress-nginx-internal.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx-internal
  labels:
    app.kubernetes.io/name: ingress-nginx-internal
    app.kubernetes.io/part-of: ingress-nginx-internal
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx-internal
    app.kubernetes.io/part-of: ingress-nginx-internal
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  - name: https-alt
    port: 4443
    targetPort: https
